--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev:client": "webpack serve --mode development",
     "dev:server": "nodemon ./src/server/index.js",
-    "build": "webpack --mode production",
+    "prestart": "webpack --mode production",
     "start": "node ./src/server/index.js"
   },
   "repository": {
@@ -20,9 +20,10 @@
   },
   "homepage": "https://github.com/alvlinarez/colabora#readme",
   "dependencies": {
+    "aws-sdk": "2.790.0",
+    "cors": "2.8.5",
     "dotenv": "8.2.0",
     "express": "4.17.1",
-    "express-validator": "6.6.1",
     "mongoose": "5.10.13",
     "multer": "1.4.2",
     "react": "17.0.1",
