--- a/package.json
+++ b/package.json
@@ -21,13 +21,18 @@
   "homepage": "https://github.com/alvlinarez/colabora#readme",
   "dependencies": {
     "aws-sdk": "2.790.0",
+    "axios": "0.21.0",
     "cors": "2.8.5",
+    "date-fns": "2.16.1",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "formik": "2.2.5",
     "mongoose": "5.10.13",
     "multer": "1.4.2",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-router-dom": "5.2.0",
+    "yup": "0.29.3"
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
@@ -41,15 +46,19 @@
     "@babel/runtime": "7.12.5",
     "@types/react": "16.9.56",
     "@types/react-dom": "16.9.9",
+    "@types/react-router-dom": "5.1.6",
     "babel-loader": "8.2.1",
     "css-loader": "5.0.1",
     "fork-ts-checker-webpack-plugin": "6.0.1",
     "html-webpack-plugin": "4.5.0",
     "mini-css-extract-plugin": "1.3.0",
     "morgan": "1.10.0",
+    "node-sass": "5.0.0",
     "nodemon": "2.0.6",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "prettier": "2.1.2",
+    "resolve-url-loader": "3.1.2",
+    "sass-loader": "10.1.0",
     "style-loader": "2.0.0",
     "terser-webpack-plugin": "5.0.3",
     "typescript": "4.0.5",
