--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/react": "16.9.56",
     "@types/react-dom": "16.9.9",
     "@types/react-router-dom": "5.1.6",
+    "@types/yup": "0.29.9",
     "babel-loader": "8.2.1",
     "css-loader": "5.0.1",
     "fork-ts-checker-webpack-plugin": "6.0.1",
