--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-router-dom": "5.2.0",
-    "yup": "0.29.3"
+    "yup": "0.29.3",
+    "webpack": "5.4.0",
+    "webpack-cli": "4.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
@@ -64,8 +66,6 @@
     "terser-webpack-plugin": "5.0.3",
     "typescript": "4.0.5",
     "url-loader": "4.1.1",
-    "webpack": "5.4.0",
-    "webpack-cli": "4.2.0",
     "webpack-dev-server": "3.11.0"
   }
 }
