--- a/package.json
+++ b/package.json
@@ -34,7 +34,19 @@
     "react-router-dom": "5.2.0",
     "yup": "0.29.3",
     "webpack": "5.4.0",
-    "webpack-cli": "4.2.0"
+    "webpack-cli": "4.2.0",
+    "babel-loader": "8.2.1",
+    "css-loader": "5.0.1",
+    "fork-ts-checker-webpack-plugin": "6.0.1",
+    "html-webpack-plugin": "4.5.0",
+    "mini-css-extract-plugin": "1.3.0",
+    "node-sass": "5.0.0",
+    "optimize-css-assets-webpack-plugin": "5.0.4",
+    "resolve-url-loader": "3.1.2",
+    "sass-loader": "10.1.0",
+    "style-loader": "2.0.0",
+    "terser-webpack-plugin": "5.0.3",
+    "url-loader": "4.1.1"
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
@@ -50,22 +62,10 @@
     "@types/react-dom": "16.9.9",
     "@types/react-router-dom": "5.1.6",
     "@types/yup": "0.29.9",
-    "babel-loader": "8.2.1",
-    "css-loader": "5.0.1",
-    "fork-ts-checker-webpack-plugin": "6.0.1",
-    "html-webpack-plugin": "4.5.0",
-    "mini-css-extract-plugin": "1.3.0",
     "morgan": "1.10.0",
-    "node-sass": "5.0.0",
     "nodemon": "2.0.6",
-    "optimize-css-assets-webpack-plugin": "5.0.4",
     "prettier": "2.1.2",
-    "resolve-url-loader": "3.1.2",
-    "sass-loader": "10.1.0",
-    "style-loader": "2.0.0",
-    "terser-webpack-plugin": "5.0.3",
     "typescript": "4.0.5",
-    "url-loader": "4.1.1",
     "webpack-dev-server": "3.11.0"
   }
 }
