--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "sass-loader": "10.1.0",
     "style-loader": "2.0.0",
     "terser-webpack-plugin": "5.0.3",
-    "url-loader": "4.1.1"
+    "url-loader": "4.1.1",
+    "typescript": "4.0.5"
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
@@ -65,7 +66,6 @@
     "morgan": "1.10.0",
     "nodemon": "2.0.6",
     "prettier": "2.1.2",
-    "typescript": "4.0.5",
     "webpack-dev-server": "3.11.0"
   }
 }
