--- a/package.json
+++ b/package.json
@@ -47,7 +47,11 @@
     "style-loader": "2.0.0",
     "terser-webpack-plugin": "5.0.3",
     "url-loader": "4.1.1",
-    "typescript": "4.0.5"
+    "typescript": "4.0.5",
+    "@types/react": "16.9.56",
+    "@types/react-dom": "16.9.9",
+    "@types/react-router-dom": "5.1.6",
+    "@types/yup": "0.29.9"
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
@@ -59,10 +63,6 @@
     "@babel/preset-react": "7.12.5",
     "@babel/preset-typescript": "7.12.1",
     "@babel/runtime": "7.12.5",
-    "@types/react": "16.9.56",
-    "@types/react-dom": "16.9.9",
-    "@types/react-router-dom": "5.1.6",
-    "@types/yup": "0.29.9",
     "morgan": "1.10.0",
     "nodemon": "2.0.6",
     "prettier": "2.1.2",
