--- a/package.json
+++ b/package.json
@@ -51,9 +51,7 @@
     "@types/react": "16.9.56",
     "@types/react-dom": "16.9.9",
     "@types/react-router-dom": "5.1.6",
-    "@types/yup": "0.29.9"
-  },
-  "devDependencies": {
+    "@types/yup": "0.29.9",
     "@babel/core": "7.12.3",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/plugin-transform-react-constant-elements": "7.12.1",
@@ -62,7 +60,9 @@
     "@babel/preset-env": "7.12.1",
     "@babel/preset-react": "7.12.5",
     "@babel/preset-typescript": "7.12.1",
-    "@babel/runtime": "7.12.5",
+    "@babel/runtime": "7.12.5"
+  },
+  "devDependencies": {
     "morgan": "1.10.0",
     "nodemon": "2.0.6",
     "prettier": "2.1.2",
